# illumina-demuxer

./: .gitignore  Cargo.toml
src/: bcl_iterator.rs  main.rs  run_info.rs  sample_sheet.rs
