[package]
name = "how-hard-can-demux-be"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.5"
rayon = "1.7"
tokio = { version = "1.39.3", features = ["full"] }
flate2 = { version = "1.0.33", features = ["zlib-ng"], default-features = false }
async-compression = { version = "0.4.12", features = ["tokio", "gzip"] }